[gd_scene load_steps=5 format=3 uid="uid://ccbq87ejju5oo"]

[ext_resource type="Script" path="res://scripts/characters/eskimo.gd" id="1_krjrq"]
[ext_resource type="PackedScene" uid="uid://owjm1kcitiu4" path="res://scenes/spear.tscn" id="2_0qr2v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xly42"]
radius = 40.0
height = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2wylj"]
radius = 300.0

[node name="Eskimo" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_krjrq")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xly42")

[node name="SpearRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpearRange"]
shape = SubResource("CircleShape2D_2wylj")

[node name="Spear" parent="." instance=ExtResource("2_0qr2v")]
position = Vector2(-50, -30)

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timeout"]
[connection signal="body_entered" from="SpearRange" to="." method="_on_spear_range_entered"]
[connection signal="body_exited" from="SpearRange" to="." method="_on_spear_range_exited"]
